# aoc2025

./: .gitignore  README  aoc2025.cabal
app/: D10C1.hs  D10C2.hs  D11C1.hs  D11C2.hs  D12C1.hs  D12C2.hs  D1C1.hs  D1C2.hs  D2C1.hs  D2C2.hs  D3C1.hs  D3C2.hs  D4C1.hs  D4C2.hs  D5C1.hs  D5C2.hs  D6C1.hs  D6C2.hs  D7C1.hs  D7C2.hs  D8C1.hs  D8C2.hs  D9C1.hs  D9C2.hs  Main.hs
