cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
synopsis:           AoC 2025, in haskell!
author:             muesli4brekkies
maintainer:         muesli4brekkies@gmail.com
build-type:         Simple
extra-doc-files:    README

common warnings
    ghc-options: -Wall

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    other-modules:    D1C1 D1C2 D2C1 D2C2 D3C1 D3C2
    build-depends:    base >=4.18.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
