cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
synopsis:           AoC 2025, in haskell!
author:             muesli4brekkies
maintainer:         muesli4brekkies@gmail.com
build-type:         Simple
extra-doc-files:    README

common warnings
    ghc-options: -Wall

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    other-modules:    D1C1 D1C2 D2C1 D2C2 D3C1 D3C2 D4C1 D4C2 D5C1 D5C2 D6C1 D6C2 D7C1 D7C2 D8C1 D8C2 D9C1 D9C2 D10C1 D10C2 D11C1 D11C2 D12C1 D12C2
    build-depends:    base >=4.19.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
